tests/baselines/reference/inheritanceStaticPropertyOverridingAccessor.errors.txt
inheritanceStaticPropertyOverridingAccessor.ts(3,9): error TS2322: Type 'null' is not assignable to type '() => string'.


==== inheritanceStaticPropertyOverridingAccessor.ts (1 errors) ====
    class a {
        static get x(): () => string {
            return null;;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type '() => string'.
        }
        static set x(aValue: () => string) {
        }
    }
    
    class b extends a {
        static x: () => string;
    }